project2/test/test_11710204_1.out
Error type 1 at Line 4: undefined variable: b
