project2/test/test_11710204_1.spl
int test_11710204_1()
{
  int a = 3;
  a = a + b;
  return a;
}
